--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table>
         <tr> 
-            <td><img src="images/IMG_8117-modified (1).jpg" alt="Diwanshi's photo"></td>
+            <td><img src="IMG_8117-modified (1).jpg" alt="Diwanshi's photo"></td>
             <td> <h1>Diwanshi Sharma</h1>  
                 <p><em>Student at <strong>GL Bajaj Institute of Technology and Management</strong></em></p>
                 <p>I am doing btech in computer science specialised in artificial intelligence.</p></td>
